Major Changes: 1) Added some more fields in AppUser. 2) Added endpoint to get a hotel's report. 3) Added user apis like get profile, edit profile, get all bookings. 4) Added InventoryController to get/update inventories. 5) changed updateInventory method in InventoryRepository. 6) Added Controller method to update room. 7) Authenticated "/users/**" routes.